--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   offerings for income management systems, for local authorities and public 
   sector bodies.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.localgovims.digital/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: localgovims
 github_username:  localgovims
 
