--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Looking to offer a viable and sustainable alternative to the current market
   offerings for income management systems, for local authorities and public 
   sector bodies.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://localgovims.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: localgovims
 github_username:  localgovims
 
